--- a/LAB6.Rmd
+++ b/LAB6.Rmd
@@ -15,11 +15,15 @@ knitr::opts_chunk$set(echo = TRUE, cache = TRUE)
 
 ## Some definitions
 
-In this lab we will step back from single-population models to consider multiple populations! A collection of populations that are connected via dispersal is called a **metapopulation**. The simplest types of spatially structured population model are the **classical metapopulation models** (covered in Gotelli Ch 4). 
+In this lab we will step back from single-population models to consider multiple populations! 
 
-In this model, we have a **landscape** with a certain number of habitable **patches**. Patches are either **occupied** (coded as 1) or not (coded as 0). 
+A collection of populations that are connected via dispersal is called a **metapopulation**. The simplest types of spatially structured population models are the **classical metapopulation models** (covered in Gotelli Ch 4). 
 
-In the classical metapopulation framework, we are not keeping track of abundance ($N$) any more- we are just keeping track of whether each patch is occupied or not, and how many total occupied patches we have in our metapopulation. A patch is composed of individuals, whereas a metapopulation is composed of patches!
+In classical metapopulation models, we have a **landscape** with a certain number of habitable **patches**. Patches are either **occupied** (coded as 1) or not (coded as 0). 
+
+In this framework, we are not keeping track of abundance ($N$) - we are instead keeping track of whether each patch is occupied or not, and how many total occupied patches we have in our metapopulation. 
+
+A patch is composed of individuals, whereas a metapopulation is composed of patches!
 
 **colonization** is when an unoccupied patch becomes occupied! (via **immigration**).  
 
@@ -31,27 +35,31 @@ More formally, here are some terms we will consider:
 
 $f_t$ is the fraction of patches that are occupied at time $t$. This is the primary [Stock] in our classical metapopulation models.  
 
-$I$ is the total fraction of the metapopulation that is colonized by immigrants in a given time period (colonization rate, or "immigration" rate) 
+$I$ is the fraction of patches in the metapopulation that are colonized in a given time period (colonization rate, or "immigration" rate) 
 
-$E$ is the total fraction of the metapopulation that goes extinct per time period (extirpation rate)
+$E$ is the total fraction of patches in the metapopulation that go extinct (become extirpated) per time period (extirpation rate)
 
 Therefore, the absolute change in metapopulation occupancy can be expressed as:
 
 $\Delta f = I - E  \qquad \text{(Eq. 1)}$
 
+The rates I and E can be expressed as per-patch rates (just like B and D can be expressed in terms of per-capita vital rates, b and d)
+
 $p_i$ is the probability of colonization *for any unoccupied patch*.
 
 $p_e$ is the probability of extinction *for any occupied patch*.
 
-If most patches in the landscape are unoccupied, then the majority of the metapopulation is available to be colonized. 
+If most patches in the landscape are unoccupied, then the majority of the metapopulation is available for colonization. 
 
-If most patches in the landscape are already occupied, then most of the metapopulation is unavailable for colonization. 
+If most patches in the landscape are already occupied, then most of the metapopulation is unavailable for colonization.
+
+The emptier the metapopulation, the higher the colonization rate (all else equal).
 
 We can express this mathematically:
 
 $I = p_i\cdot (1-f)  \qquad \text{(Eq. 2)}$  
 
-If most patches in the landscape are occupied, then the majority of the metapopulation can potentially go extinct. 
+Similarly, if most patches in the landscape are occupied, then the majority of the metapopulation can potentially go extinct. 
 
 If most patches in the landscape are unoccupied, then most of the metapopulation is unavailable for extinction. We can express this mathematically:
 
@@ -59,7 +67,7 @@ $E = p_e\cdot f  \qquad \text{(Eq. 3)}$
 
 Finally, all classical metapopulation models assume the following:   
 
-- Homogeneous patches (all patches equal and interchangeable)
+- Homogeneous patches (patches are equal and interchangeable)
 - Spatial context does not affect extinction and colonization parameters
 - No time lags
 - Very large number of patches
@@ -68,9 +76,9 @@ Finally, all classical metapopulation models assume the following:
 
 ### Variant #1: island-mainland model
 
-Colonization occurs via immigration from a constant external source (**propagule rain**). This is our simplest classical metapopulation model.
+In this model, colonization occurs via immigration from a constant external source (**propagule rain**). This is our simplest classical metapopulation model.
 
-This model (and only this model) assumes that per-patch extinction and colonization rates ($p_i$ and $p_e$) are not dependent on the fraction of patches occupied ($f$). That is, $p_i$ and $p_e$ are constant (unchanging over time regardless of the status of the metapopulation).
+This model (and only this model) assumes that per-patch extinction and colonization rates ($p_i$ and $p_e$) are independent of the fraction of patches occupied ($f$). That is, $p_i$ and $p_e$ are constants (unchanging over time regardless of the status of the metapopulation).
 
 Combining equations 1, 2, and 3, we get the island-mainland metapopulation model:
 
@@ -82,46 +90,49 @@ In this scenario, colonization can only happen via immigration from within the m
 
 $p_i = i \cdot f   \qquad \text{(Eq. 5)}$
 
-In this model, the colonization rate approaches $i$ as nearly all patches become occupied, and approaches zero as the metapopulation approaches global extinction
+In this model, the per-patch colonization rate $p_i$ approaches $i$ as nearly all patches become occupied, and approaches zero as the metapopulation approaches global extinction
 
 All other elements remain unchanged from the island-mainland model.  
 
 ### Variant #3: rescue effect. 
 
-Under the rescue effect model, the extinction rate can be reduced by immigration from other patches in the metapopulation!
+Under the rescue effect model, the per-patch extinction rate $p_e$ can be reduced by immigration from other patches in the metapopulation!
 
 $p_e = e(1-f)   \qquad \text{(Eq. 6)}$
 
 In this model, the extinction rate approaches 0 as the metapopulation approaches full occupancy [note, this may not be realistic, as it implies a perfectly successful rescue effect!]. 
 
-On the other hand, the extinction rate approaches $e$ as the metapopulation approaches global extirpation (when there are little to no immigrants from other occupied patches that could 'rescue' an occupied patch from extinction). 
+On the other hand, the extinction rate approaches $e$ as the metapopulation approaches maximum "emptiness", or global extirpation (since there are little to no immigrants from other occupied patches that could 'rescue' an occupied patch from extinction). 
 
 All other elements remain unchanged from the island-mainland model.
 
 ### Variant #4: both internal colonization AND rescue effect!
 
-This one is pretty self-explanatory. But it has some interesting emergent properties!
+This one is pretty self-explanatory. But it has some interesting properties!
 
 ## What is a metapopulation?
 
-Finally, the term *metapopulation* is often used to refer to models where we don't care about abundance, we only care about occupancy- as in the 'classical' models described above. 
+Finally, the term *metapopulation* is often used to refer to models where we don't care about abundance (we only care about patch occupancy)- as in the 'classical' models described above. Exercises 1-4 in this lab involve building classical metapopulation models. 
 
 However, a metapopulation more generally is simply a *collection of interconnected habitat patches*. 
 We can keep track of patch abundance in a metapopulation model if we want. In fact, each patch can contain a stage-structured, density dependent population if we really want. The level of complexity/detail in our models is totally under our control as modelers! 
 
-Just as we can use metapopulation models to study the probability of **global extinction**, we can also study **global abundance** and global abundance trends across the entire metapopulation. 
+Just as we can use metapopulation models to study the probability of **global extinction**, we can also study **global abundance** and global abundance trends across the entire metapopulation. Exercise 5 of this lab involves working with a metapopulation model that explicitly considers both abundance dynamics and occupancy dynamics. 
 
 ## Exercise 1: 'classical' metapopulation models in InsightMaker
 
 NOTE: _you will need the Gotelli book (Chapter 4) to answer several questions_
 
-First, build an InsightMaker model to represent the basic island-mainland metapopulation model described above. 
+Your first task is to build an InsightMaker model to represent the basic island-mainland metapopulation model described above. 
 
-The total fraction of occupied patches $f$ should be represented as a [Stock]. Make sure this stock can not go negative. 
+The total fraction of occupied patches $f$ should be represented as a [Stock]. Make sure this stock can *not* go negative. 
 
 There should be two [Flows]: one for *colonization* (I) and one for *extinction* (E). Initialize $f$ at 0.25 (set the initial value of the stock at year 0 to 25% of patches occupied). 
 
-The extinction and colonization probabilities ($p_e$ and $p_i$) should be represented as [Variables]. In the island-mainland model, these are constants. Set $p_e$ to 0.15 and $p_i$ to 0.45. 
+The extinction and colonization probabilities ($p_e$ and $p_i$) should be represented as [Variables]. In the island-mainland model, these are constants. 
+
+Set $p_e$ to 0.15 and $p_i$ to 0.45.
+
 Use the description of the island-mainland model above (and in Gotelli Ch. 4) to complete your model (drawing the appropriate links, and setting appropriate equations for I and E (the Flows). 
 
 Simulate the metapopulation for 100 years and make sure that $f$ reaches an equilibrium value between 0 and 1.
@@ -163,11 +174,11 @@ Just for fun, try some alternative values for the e and i parameters in this mod
 
 ## Exercise 5: a spatial metapopulation model!
 
-Agent-based models (individual-based models) are well-suited for considering spatial context. In addition to being a flexible system for stock-flow modeling, Insightmaker also has the capability of running agent-based simulation models. If you want to learn more about agent-based models for modeling populations, check out [this overview](LECTURE10.html) 
+Agent-based models (agent-based models) are well-suited for considering spatial context. In addition to being a flexible system for stock-flow modeling, Insightmaker also has the capability of running agent-based simulation models. If you want to learn more about agent-based models for modeling populations, check out [this overview](LECTURE10.html) 
 
 I have already prepared an agent-based metapopulation model for you. You can access and clone this model [here](https://insightmaker.com/insight/74948/Agent-based-metapopulation-model).
 
-Each population/patch in the metapopulation is represented by an "individual", or "agent". These individuals cannot move (they are patches of land, after all), but they can influence each other via immigration and emigration!
+Each population/patch in the metapopulation is represented as an "agent" in this model. These agents cannot move (they are patches of land, after all), but they can influence each other via immigration and emigration!
 
 The landscape is 200 km by 200 km. Each time a simulation is initiated, patches are placed randomly in the landscape. The **metapopulation size** (total number of patches) is initialized at 10 (but you can change this quantity using a slider bar). 
 
@@ -189,17 +200,12 @@ Graphical summaries are available, which illustrate the spatial configuration of
 
 Take some time to open the model (clone it!) and get familiar with the parameters and model behavior. If you don't understand something, ask your instructor or TA! Make sure you have the following starting parameters:
 
-Metapopulation size: 10 patches     
-r_max: 0.11      
-maxdist (maximum dispersal distance): 50 kilometers       
-dispersal rate: 0.25      
-Mean K per population: 10          
+Metapopulation size: 10 patches         
+r_max: 0.11        
+dispersal rate: 0.25        
+Mean K per population: 10     
+Max dispersal distance: 50 kilometers   
 
-NOTE: there is one parameter (max dispersal distance, or 'maxdist') you will need to pay attention to, but it is not represented by a value slider (I couldn't get it to work that way, unfortunately). To alter the maximum dispersal distance, you need to open the equation editor for the [Immigrants] variable, and change the value in the top line, which should look something like this:
-
-```
-maxdist <- 50
-```
 
 5a. Use InsightMaker's *sensitivity testing tool* to run the model 100 times (or 50 times, if your browser crashes!), monitoring the total metapopulation occupancy. What is the approximate risk of regional (global) extinction of this metapopulation over 100 years? Briefly explain how you got your answer. 
 
@@ -207,7 +213,7 @@ maxdist <- 50
 
 Finally, imagine that this metapopulation represents the last remaining patches of habitat for an endangered butterfly. You have identified three possible management strategies: Starting from the initial conditions specified at the beginning of this exercise, you could:    
       
-i. Improve the intervening, or "matrix", habitat, effectively doubling the maximum dispersal distance (individuals are able to disperse more effectively over longer distances). [see note above about how to change the maximum dispersal distance]         
+i. Improve the intervening, or "matrix", habitat, effectively doubling the maximum dispersal distance (individuals are able to disperse more effectively over longer distances).         
 ii. Improve existing habitats, doubling the mean per-patch carrying capacity (labeled "Mean K per population").       
 iii. Restore habitat, effectively doubling the number of patches (labeled "metapopulation").           
 
