--- a/LECTURE13.Rmd
+++ b/LECTURE13.Rmd
@@ -25,7 +25,7 @@ knitr::opts_chunk$set(echo = TRUE, cache = TRUE)
     * Chapter 2: Logistic growth
     * Chapter 3: Age structured population and matrix models
     * Chapter 4: Metapopulations
-- All material covered in lectures, including the following web pages and corresponding lectures and top hat pages:    
+- All material covered in lectures, including the following web pages:    
     * [Systems thinking and modeling](LECTURE1.html)
     * [Exponential growth](LECTURE2.html)
     * [Malthus and limits to growth](LECTURE3.html)
